          manager and never passed on to MMBasic.
  - Added OPTION SEARCH PATH <path> command as per CMM2.
  - Added OPTION {SAVE | LOAD} <filename> command.
  - Added OPTION RESET [ALL | <option>] command.
  - Added PEEK(DATAPTR) function and POKE DATAPTR ptr% command for getting
    and setting the DATA read pointer.
  - Added READ {RESTORE | SAVE} command for pushing and popping the DATA read
    position to an internal stack as per MMB4W.
  - Changed OPTION LIST to only show options that differ from their defaults:
         - use OPTION LIST ALL to list all options.
  - Changed OPTION <option> <value> command so that for all options with
    enumerated values the value can now be supplied as a string, e.g.
        OPTION CODEPAGE NONE
        OPTION CODEPAGE "NONE"
        DIM none$ = "NONE"
        OPTION CODEPAGE none$
  - Changed RESTORE command to support targets given as string or number
    expressions as per PicoMite.
  - Changed SYSTEM execute command to have a 3rd optional argument to capture
    the exit status of the executed command, e.g.
        SYSTEM command$, out$, exit_status%
        SYSTEM command$, out%(), exit_status%
    The SYSTEM command now only reports an error if it cannot run the command.
    If the command runs but fails then no error is reported but the failure
    code will be captured in exit_status%.
  - Changed LOAD and RUN so that if a filename without a [.bas|.BAS|.Bas]
    extension is not provided then one is automatically appended:
        - unlike other MMBasic ports MMB4L has a case-sensitive file-system
          and expects MMBasic program files to have one of three possible
          extensions: .bas, .BAS, or .Bas.
        - if no extension is specified then MMB4L will check for the existence
          of a file with each extension in order, if no such file is found then
          it assumes the .bas extension.
  - Changed assignment of values to MM.ERRNO, they are now:
           0      : no error.